# sol-grid-bot

./: CMakeLists.txt  README.md  compile_commands.json
lib/: book.hpp  config.hpp  json.hpp  logger.hpp  market.hpp  ticker.hpp  trade.hpp  wallet.hpp  websockets.hpp
src/: book.cpp  config.cpp  json.cpp  logger.cpp  main.cpp  market.cpp  wallet.cpp  websocket.cpp
